# helpbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: lint.yml  release-please.yml  ruff.yml  tests.yml
data/: data.csv  load_rubq.py
prompts/: context.md  system.md
src/: app.py  database.py  main.py  model.py  repository.py  router.py  utils.py
src/api/: exceptions.py  router.py  schemas.py
src/app/: ui.py  utils.py
src/core/: history.py  model.py  settings.py
src/db/: database.py  repository.py  session.py
src/telegram/: bot.py
src/ui/: app.py
tests/: conftest.py  test_main.py
tests/api/: test_exceptions.py  test_router.py  test_schemas.py
tests/app/: test_ui.py
tests/core/: test_model.py  test_settings.py
tests/db/: test_repository.py
tests/telegram/: test_bot.py
tests/ui/: test_app.py
