[project]
name = "helpbot"
version = "1"
description = "Q&A assistant powered by FastAPI, Streamlit, LangChain, and Ollama"

dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "more-itertools>=10.7.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
