[project]
name = "helpbot"
version = "1.0.0"
description = "Q&A assistant powered by FastAPI, Streamlit, Ollama and Qdrant"

dependencies = [
    "aiogram>=3.21.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.12",
    "more-itertools>=10.7.0",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
pythonpath = ["."]
